Kubernetes/ingress-controller/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Grikhanov Roman 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: grihanov.ru
    http:
      paths:
        - backend:
           serviceName: web
           servicePort: 80

  - host: web1.grihanov.ru
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.grihanov.ru
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: web3.grihanov.ru
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
