Kubernetes/ingress-controller/ingress-paths.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Host Paths
#
# Copyleft (c) by Grikhanov Roman 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: grihanov.ru
    http:
      paths:
      - path: "/page1"
        backend:
          serviceName: web
          servicePort: 80

      - path: "/page2"
        backend:
          serviceName: web
          servicePort: 80

      - path: "/page3"
        backend:
          serviceName: web
          servicePort: 80
